--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Hope - Tu Bot Amigo</title>
+  <!-- Asegúrate de que el archivo esté en minúsculas -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>Hope - Tu Bot Amigo</h2>
+  <h2>🤖 Hope - Tu Bot Amigo</h2>
 
   <!-- Carita -->
   <div class="face">
@@ -21,11 +22,12 @@
 
     <!-- Formulario para enviar mensajes -->
     <form id="chatForm" class="input-area">
-      <input type="text" id="userInput" placeholder="Escríbele algo...">
+      <input type="text" id="userInput" placeholder="Escríbele algo..." autocomplete="off">
       <button type="submit">Enviar</button>
     </form>
   </div>
 
+  <!-- Asegúrate de que el archivo esté en minúsculas -->
   <script src="script.js"></script>
 </body>
 </html>
